# team08

./: .gitignore  data.text  los.cpp  make.sh  params.sh  run.sh
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/ee4308_bringup/: tf2_turtle
devel/lib/ee4308_turtle/: turtle_main  turtle_motion  turtle_move
devel/lib/pkgconfig/: ee4308_bringup.pc  ee4308_turtle.pc
devel/share/ee4308_bringup/cmake/: ee4308_bringupConfig.cmake
devel/share/ee4308_turtle/cmake/: ee4308_turtleConfig.cmake
src/ee4308_bringup/: CMakeLists.txt  package.xml
src/ee4308_bringup/launch/: bringup_labs.launch
src/ee4308_bringup/rviz/: labs.rviz
src/ee4308_bringup/scripts/: teleop_hector.py  teleop_turtle.py
src/ee4308_bringup/src/: tf2_turtle.cpp
src/ee4308_bringup/urdf/: turtlebot3_burger.gazebo.xacro
src/ee4308_bringup/worlds/: world20.world  world21.world  world22proj1.sh
src/ee4308_turtle/: CMakeLists.txt  package.xml
src/ee4308_turtle/config/: turtle.yaml
src/ee4308_turtle/include/ee4308_turtle/: common.hpp  cubic_hermite_spline.h  cubic_polynomial.h  trajectory.hpp
src/ee4308_turtle/launch/: run.launch
src/ee4308_turtle/src/: common.cpp  cubic_hermite_spline.cpp  cubic_polynomial.cpp  los.cpp  main.cpp  motion.cpp  move.cpp  trajectory.cpp
src/ee4308_turtle/test/: cubic_hermite_spline_test.cpp
